--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -6,15 +6,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'accounts/css/main.css' %}" type="text/css">
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static "base/css/base.css" %}" type="text/css">
+    <title>{% firstof html_title "MY CAMPUS" %}</title>
     {% block css %}
     {% endblock %}
 </head>
 <body>
-    <header></header>
+    <div class="base__header">
+        <div class="base__header__used-space container">
+            <div class="base__logo"><span>MY CAMPUS</span></div>
+            {% block header %} {% endblock %}
+        </div>
+    </div>
     {% block contents %}
-    
+
     {% endblock %}
     {% block javascript %}
     {% endblock %}
