--- a/project/board/templates/board/board.html
+++ b/project/board/templates/board/board.html
@@ -14,7 +14,7 @@ board
 </div>
 
 
-{% for post in queryset %}
+{% for post in posts %}
 <a href='./{{post.id}}'>
 <div>
 author : {{post.author}}<br>
