--- a/project/accounts/templates/registration/login.html
+++ b/project/accounts/templates/registration/login.html
@@ -2,7 +2,10 @@
 {% load staticfiles %}
 {% block css %}
     <link rel="stylesheet" href="{% static "registration/css/main.css" %}">
+    <link rel="stylesheet" href="{% static "accounts/css/modal.css" %}">
 {% endblock %}
+
+
 {% block contents %}
     <div class="container">
         <div class="container__whitebox">
@@ -20,10 +23,31 @@
                         <button class="user-info__button forgot-button">Forgot your ID / Password? </button>
                     </form>
                     <div class="accounts__newbiebox">
-                        <button class="user-info__button newbie-button">New to MY CAMPUS?</button>
+                        <button class="user-info__button newbie-button" onclick="signupModalOpen">New to MY CAMPUS?</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="signup-modal">
+        <div class="modal-contents">
+            <div class="modal__exit-button">
+                <span class="fas fa-times"></span>
+            </div>
+            <div class="signup-form">
+                <div class="signup-form__input">
+                    <label for="univ" content="Your University" class="signup__form-label">You Universiy</label>
+                    <input name="univ" type="text" readonly value="{{ univ_full_name }}" class="signup__verification-form" />
+                </div>
+                <div class="signup-form__input">
+                    <label for="email" class="signup__form-label">Enter your university email</label>
+                    <input name='email' type="text" class="signup__verification-form"/>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block javascript %}
+
 {% endblock %}
