mail 보내기 하는데 테스트 중에 건태 이메일 블락됨

--- a/project/accounts/static/accounts/css/signup_modal.css
+++ b/project/accounts/static/accounts/css/signup_modal.css
@@ -68,5 +68,12 @@
 .modal__exit-button span {
     color:var(--main-color);
     font-size: 1.5rem;
+    transition: all linear .1s;
+}
+
+
+.modal__exit-button span:hover {
+    font-size: 2.0rem;
+    cursor: pointer;
 }
 
