--- a/project/accounts/templates/accounts/mail.html
+++ b/project/accounts/templates/accounts/mail.html
@@ -15,7 +15,7 @@
         <p>No one can figure out what e-mail owner wrote, so Please feel free to use MY CAMPUS!!</p>
     </div>
     <div class="mail__validate-button">
-        <a href="{% url "api:activate" univ deploy_time user_email %}">
+        <a href="{{ url }}">
             <div class="mail__verify-button">
                 <span>
                     Verify my email
