--- a/project/board/templates/admin/suggestions.html
+++ b/project/board/templates/admin/suggestions.html
@@ -3,7 +3,7 @@
     <h2>Suggested Category</h2>
     <ul>
         {% for list in s_ctgy %}
-            <li>{{ list.name}}</li>
+            <li><a href="/admin/board/suggested/suggested/{{ list.pk }}/">{{ list.name }}</a></li>
         {% endfor %}
     </ul>
 {% endblock %}
