--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -8,7 +8,8 @@
   {% for post in posts %}
     <li>
       <input type="button" class="like" name="{{ post.pk }}" value="Like">
-      {{ post.total_likes }} :
+
+      <span id="post_{{ post.pk }}">{{ post.total_likes }}</span> :
       {{ post.title }}
     </li>
   {% endfor %}
@@ -22,20 +23,21 @@
 <script>
   $('.like').click(function () {
     const univUrlName = "{{ univ.url_name }}";
+    const url = '{% url 'core:board:post_like' 0 %}'.replace('0', univUrlName);
     $.ajax({
       type: 'POST',
-      {#url: "{% url 'board:post_like' univUrlName %}",#}
-      url: `/uof/like/`,
+      url: url,
       data: {
-        pk: $(this).attr('name'),
+        'pk': $(this).attr('name'),
         'csrfmiddlewaretoken': '{{ csrf_token }}',
+        url_name: univUrlName
       },
       datatype: "json",
       success: function (response) {
-        $(this).html(response['likes_count']);
+        $(`#post_${response['pk']}`).text(response['likes_count']);
       },
-      error: function() {
-          console.log(500)
+      error: function(request, status, error) {
+          alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
         }
     })
   });
