--- a/project/accounts/templates/accounts/signup.html
+++ b/project/accounts/templates/accounts/signup.html
@@ -1,4 +1,8 @@
-GOOD!
+{% extends "base.html" %}
+{% load staticfiles %}
 
-<div>{{ email }}</div>
-<div>{{ request.urlencode }}</div>
+{% block contents %}
+    <div class="container">
+        {{ form. }}
+    </div>
+{% endblock %}
