--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+{% load staticfiles %}
+{% block contents %}
+
+
 {{ univ.full_name }} <br>
 {{ univ.short_name }} <br>
 {% for category in categories %}
@@ -40,3 +45,4 @@
     })
   });
 </script>
+{% endblock %}
