--- a/project/board/templates/admin/suggestions_detail.html
+++ b/project/board/templates/admin/suggestions_detail.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% block content %}
     <h1><b>TITLE</b></h1>
-    <h1>{{ suggested }}</h1>
+    <h1>{{ suggested.content_type }}</h1>
     <hr/>
     <h3>Descripton</h3>
     <p>{{ dscrp}}</p>
