--- a/project/accounts/templates/accounts/signup.html
+++ b/project/accounts/templates/accounts/signup.html
@@ -3,6 +3,27 @@
 
 {% block contents %}
     <div class="container">
-        {{ form. }}
+        <div class="signup__white-wrapper">
+            <div class="accounts__signup-form">
+                <form method="post" action="" class="accounts__form-tag">
+                    <div class="signup__login-info">
+                        {{ form.username }}
+                        {{ form.password1 }}
+                        {{ form.passowrd2 }}
+                    </div>
+                    <div class="signup__sub-info">
+                        {{ form.gender }}
+                        {{ form.class_of }}
+                    </div>
+                    <div class="signup__terms-acceptance">
+                        <p class="signup__terms">
+
+                        </p>
+                        {{ form.terms_acceptance }}
+                    </div>
+                    <button class="signup__submit">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
 {% endblock %}
