회원가입, 로그인, 로그아웃 기능 구현됨

--- a/project/accounts/templates/accounts/signup.html
+++ b/project/accounts/templates/accounts/signup.html
@@ -6,21 +6,8 @@
         <div class="signup__white-wrapper">
             <div class="accounts__signup-form">
                 <form method="post" action="" class="accounts__form-tag">
-                    <div class="signup__login-info">
-                        {{ form.username }}
-                        {{ form.password1 }}
-                        {{ form.passowrd2 }}
-                    </div>
-                    <div class="signup__sub-info">
-                        {{ form.gender }}
-                        {{ form.class_of }}
-                    </div>
-                    <div class="signup__terms-acceptance">
-                        <p class="signup__terms">
-
-                        </p>
-                        {{ form.terms_acceptance }}
-                    </div>
+                    {% csrf_token %}
+                    {{ form.as_p }}
                     <button class="signup__submit">Submit</button>
                 </form>
             </div>
