--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -16,7 +16,7 @@
 <body>
     <div class="base__header">
         <div class="base__header__used-space container">
-            <div class="base__logo"><span>MY CAMPUS | {{ univ_big_short }}</span></div>
+            <div class="base__logo"><object type="image/svg+xml" data="{% static "/svg/logo-uf.svg" %}"></object></div>
             {% block header %}
             {% endblock %}
         </div>
