--- a/project/chat/templates/chat/chat.html
+++ b/project/chat/templates/chat/chat.html
@@ -19,49 +19,43 @@
 {% block javascript %}
 
 <script>
+    const chatroom = document.getElementById('chatroom')
     const m_btn = document.getElementById('m_submit')
-    const url = []
+    const params = new sb.GroupChannelParams();
+    params.addUserIds(['{{partner}}']);
     sb.connect("{{ user.username }}", function (user, error) {
         if (error) return;
-        user.nickname = "{{user.username}}"
     });
-    const params = new sb.GroupChannelParams();
-    params.isDistinct = true;
-    params.name = 'test';
-    params.addUserIds(['{{partner}}']);
-    sb.GroupChannel.createChannel(params, function (groupChannel, error) {
+
+    sb.GroupChannel.createDistinctChannelIfNotExist(params, function (groupChannel, error) {
         if (error) return;
-        url.push(groupChannel.url)
-        var prevMessageListQuery = groupChannel.createPreviousMessageListQuery();
-        prevMessageListQuery.limit = 10;
-        prevMessageListQuery.reverse = false;
-
-        prevMessageListQuery.load(function (messages, error) {
-            if (error) {
-                return;
-            }
-
-            for(i of messages){
-                chatroom.innerHTML = chatroom.innerHTML + `${i._sender.userId} : ${i.message}<br>`
-            }
+        const me = groupChannel.channel.members[0].userId == sb.currentUser.userId  ? groupChannel.channel.members[0] : groupChannel.channel.members[1]
+        const other = groupChannel.channel.members[0] == me ? groupChannel.channel.members[1] : groupChannel.channel.members[0] 
+        if (!me.metaData[other.userId]) {
+            sb.currentUser.createMetaData({
+                [other.userId]: groupChannel.channel.url
+            })
+        }
+        
+        loadLog(groupChannel.channel).load(function (messages, error) {
+            if (error) return;
+            for (m of messages) chatroom.innerHTML += strfy(m)
             chatroom.scrollTop = chatroom.scrollHeight;
         });
     });
 
+
     m_btn.addEventListener('click', e => {
-        sb.GroupChannel.getChannel(url[0], function (groupChannel, error) {
+        sb.GroupChannel.getChannel(sb.currentUser.metaData['{{ partner }}'], function (groupChannel, error) {
             if (error) return;
-            groupChannel.sendUserMessage(document.getElementById('message').value, function (
-                userMessage,
+            groupChannel.sendUserMessage(document.getElementById('message').value, function (message,
                 error) {
                 if (error) return;
-                chatroom.innerHTML = chatroom.innerHTML +
-                    `${userMessage._sender.userId} : ${userMessage.message}<br>`
+                chatroom.innerHTML += strfy(message)
                 chatroom.scrollTop = chatroom.scrollHeight;
             });
-
         });
-    })
+    });
 </script>
 
 {% endblock javascript %}
