--- a/project/chat/templates/chat/chat.html
+++ b/project/chat/templates/chat/chat.html
@@ -23,17 +23,13 @@
     const m_btn = document.getElementById('m_submit')
     const params = new sb.GroupChannelParams();
     params.addUserIds(['{{partner}}']);
-    sb.connect("{{ user.username }}", function (user, error) {
-        if (error) return;
-    });
-
+    
     sb.GroupChannel.createDistinctChannelIfNotExist(params, function (groupChannel, error) {
         if (error) return;
-        const me = groupChannel.channel.members[0].userId == sb.currentUser.userId  ? groupChannel.channel.members[0] : groupChannel.channel.members[1]
-        const other = groupChannel.channel.members[0] == me ? groupChannel.channel.members[1] : groupChannel.channel.members[0] 
-        if (!me.metaData[other.userId]) {
+        const target = groupChannel.channel.members[0]
+        if (groupChannel.isCreated && sb.currentUser.userId != target.userId ) {
             sb.currentUser.createMetaData({
-                [other.userId]: groupChannel.channel.url
+                [target.userId]: groupChannel.channel.url
             })
         }
         
