--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -28,6 +28,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sendbird@3.0.105/SendBird.min.js"></script>
     <script src="{% static 'js/API.js' %}"></script>
+    <script>
+        sb.connect("{{ user.username }}", function (user, error) {
+            if (error) return;
+        });
+    </script>
     {% block javascript %}
     {% endblock %}
 </body>
