거의다 함 사이즈 수정 해야함

--- a/project/core/static/base/css/base.css
+++ b/project/core/static/base/css/base.css
@@ -10,3 +10,8 @@
 body {
     background-color: var(--wrapper-color);
 }
+
+@font-face {
+    font-family: YDIYGO340;
+    src: url("../../fonts/YDIYGO340.ttf") format('truetype');
+}
