--- a/project/board/static/board/css/board_post.css
+++ b/project/board/static/board/css/board_post.css
@@ -3,6 +3,7 @@
     flex-direction: row;
 }
 
+
 .board__pannel__left {
     display: flex;
     width: 911px;
@@ -17,7 +18,7 @@
     flex-direction: row;
     align-items: center;
     margin: 20px 0;
-    border-radius: 20px;
+    border-radius: 12px;
 }
 
 
@@ -27,7 +28,8 @@
     justify-content: center;
     align-items: center;
     background-color: #e8e8e8;
-    width:70px;
+    border-radius: 5px;
+    width: 70px;
     height: 70px;
     margin-left: 25px;
     margin-right: 25px;
@@ -43,7 +45,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width:100%;
+    width: 100%;
     margin: 10px;
 }
 
@@ -57,10 +59,12 @@
     display: flex;
     flex-direction: row;
 }
+
 .post__mid {
     display: flex;
     flex-direction: row;
 }
+
 .post__bottom {
     display: flex;
     flex-direction: row;
@@ -76,4 +80,175 @@
     width: 244px;
     margin-left: 30px;
     margin-top: 20px;
+}
+
+
+.post__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.post__top__category {
+    background-color: #eff2f4;
+    border-radius: 4px;
+    padding: 1px 40px 3px 40px;
+    font-weight: normal;
+    color: #5d5c5e;
+    text-align: center;
+    font-size: 17px;
+}
+
+.post__mid {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+}
+
+.post__mid__title {
+    font-size: 34px;
+    font-weight: normal;
+    font-style: normal;
+    line-height: 1.21;
+    text-align: left;
+    margin-bottom: 5px;
+}
+
+.post__mid__title a {
+    color: #302d2c;
+    text-decoration: none;
+}
+
+.post__mid__content {
+    font-size: 20px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.2;
+    text-align: left;
+    color: #a6a7a7;
+    height: 60px;
+}
+
+.post__text hr {
+    width: 100%;
+    background-color: #e3e3e3;
+    border-top: solid 1px #e3e3e3;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+
+}
+
+.post__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.post__bottom__icon {
+    display: flex;
+    align-items: center;
+    width: 40%;
+    justify-content: space-between;
+}
+
+.s_con {
+    display: flex;
+    align-items: center;
+    width: 33%;
+}
+
+.s_con img {
+    height: 15px;
+    margin-right: 10%;
+}
+
+.board__pannel__right a {
+    text-decoration: none;
+
+}
+
+.pannel__right__create {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    height: 200px;
+    border-radius: 12px;
+
+    margin-bottom: 20px;
+
+}
+
+.pannel__right__create img {
+    width: 71px;
+}
+
+.pannel__right__create p {
+    font-size: 34px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.21;
+    text-align: left;
+    color: #4fbcbd;
+}
+
+.pannel__right__category {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    border-radius: 12px;
+}
+
+.pannel__right__category p {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    color: #4fbcbd;
+}
+
+.right__category__list li {
+    width: 217.4px;
+    height: 43px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+        border-radius: 7px;
+    margin-bottom: 10px;
+}
+
+.c_common {
+    font-size: 21px;
+    font-weight: normal;
+    font-style: normal;
+    font-family: YDIYGO340;
+    color: #ffffff;
+}
+
+.right__category__list a {
+    text-decoration: none;
+}
+
+.c_a {
+    background-color: #9cd0c1;
+}
+
+.c_b {
+    background-color: #5f8da3;
+}
+
+.c_c {
+    background-color: #55b4cf;
+}
+
+.c_d {
+    background-color: #bfdec3;
 }
