--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -2,21 +2,29 @@
 {% load static %}
 
 {% block header %}
-<link rel="stylesheet" href="{% static "board/css/board_header.css" %}" type="text/css">
+    <link rel="stylesheet" href="{% static "board/css/board_header.css" %}" type="text/css">
     <div class="board__header__search">
         <form action="" method="get">
             <button type="submit" value="search">
-            <object type="image/svg+xml" data="{% static "/svg/search.svg" %}"></object>
+                <object type="image/svg+xml" data="{% static "/svg/search.svg" %}"></object>
             </button>
             <input type="text" placeholder="Search mycampus" name="search" value="{{ search }}">
         </form>
     </div>
     <div class="board__header__right">
         <ul class="board__buttons">
-            <li><object type="image/svg+xml" data="{% static "/svg/alarm.svg" %}"></object></li>
-            <li><object type="image/svg+xml" data="{% static "/svg/messege box.svg" %}"></object></li>
-            <li><object type="image/svg+xml" data="{% static "/svg/mypage.svg" %}"></object></li>
-            <li><object type="image/svg+xml" data="{% static "/svg/post.svg" %}"></object></li>
+            <li>
+                <object type="image/svg+xml" data="{% static "/svg/alarm.svg" %}"></object>
+            </li>
+            <li>
+                <object type="image/svg+xml" data="{% static "/svg/messege box.svg" %}"></object>
+            </li>
+            <li>
+                <object type="image/svg+xml" data="{% static "/svg/mypage.svg" %}"></object>
+            </li>
+            <li>
+                <object type="image/svg+xml" data="{% static "/svg/post.svg" %}"></object>
+            </li>
         </ul>
     </div>
 {% endblock %}
@@ -29,127 +37,158 @@
 {#{% endfor %}#}
 
 {% block contents %}
-    <link rel="stylesheet" href="{% static "board/css/board_post.css" %}" type="text/css">
-
-  <div class="container board__main">
-
-
+    <link rel="stylesheet" href="{% static "board/css/main_board.css" %}" type="text/css">
     <a href="{% url 'core:board:main_board' univ.url_name %}">hot</a>
     <a href="{% url 'core:board:main_board_new' univ.url_name %}">new</a>
-    <br>
-    <a href="{% url 'core:board:post_create' univ.url_name %}">Create</a>
-    <br>
-    <div class="board__pannel__left">
-    <ul>
-      {% for post in posts %}
-          <div>
-            <li class="board__post__container">
 
-            <div class="board__post__like">
-                <span id="post_{{ post.pk }}">{{ post.total_likes }}</span>
+    <div class="container board__main">
 
-                <button type="button" class="like" name="{{ post.pk }}" value="Like">
-                    <img src="{% static "/svg/like.svg" %}"/>
-                </button>
-            </div>
 
-            <div class="board__post__content">
+        <div class="board__pannel__left">
+            <ul>
+                {% for post in posts %}
+                    <div>
+                        <li class="board__post__container">
 
-                <div class="post__text">
-                    <div class="post__top">
-                        <div class="post__top__category">
-                            {{ post.ctgy.name }}
-                        </div>
-                        <div class="post__top__author">
-                            {{ post.name }}
-                        </div>
+                            <div class="board__post__like">
+                                <span id="post_{{ post.pk }}">{{ post.total_likes }}</span>
+
+                                <button type="button" class="like" name="{{ post.pk }}" value="Like">
+                                    <img src="{% static "/svg/like.svg" %}"/>
+                                </button>
+                            </div>
+
+                            <div class="board__post__content">
+
+                                <div class="post__text">
+                                    <div class="post__top">
+                                        <div class="post__top__category">
+                                            {{ post.ctgy.name }}
+                                        </div>
+                                        <div class="post__top__author">
+                                            {{ post.name }}
+                                        </div>
+                                    </div>
+                                    <div class="post__mid">
+                                        <div class="post__mid__title">
+                                            <a href="{% url 'core:board:post_detail' univ.url_name post.ctgy.name post.pk %}">{{ post.title }}</a>
+                                        </div>
+                                        <div class="post__mid__content">
+                                            {{ post.content }}
+                                        </div>
+                                    </div>
+                                    <hr/>
+                                    <div class="post__bottom">
+                                        <div class="post__bottom__icon">
+                                            <div class="s_con post__bottom__view">
+                                                <img src="{% static "/svg/view.svg" %}"/>
+                                                <span>3</span>
+                                            </div>
+                                            <div class="s_con post__bottom__comment">
+                                                <img src="{% static "/svg/comment.svg" %}"/>
+                                                <span>3</span>
+                                            </div>
+                                            <div class="s_con post__bottom__bookmark">
+                                                <img src="{% static "/svg/scrap.svg" %}"/>
+                                                <span>3</span>
+                                            </div>
+                                        </div>
+                                        <div class="post__bottom__time">
+                                            3 days...
+                                        </div>
+                                        {##}
+                                        {##}
+                                        {#                                        {% if user in post.saved.all %}#}
+                                        {#                                            <input type="button" class="bookmark" name="{{ post.pk }}" value="O">#}
+                                        {#                                        {% else %}#}
+                                        {#                                            <input type="button" class="bookmark" name="{{ post.pk }}" value="X">#}
+                                        {#                                        {% endif %}#}
+
+                                    </div>
+                                </div>
+
+                                <div class="post__image">
+
+                                </div>
+
+                            </div>
+                        </li>
                     </div>
-                    <div class="post__mid">
-                        <div class="post__mid__title">
-                           <a href="{% url 'core:board:post_detail' univ.url_name post.ctgy.name post.pk %}">{{ post.title }}</a>
-                        </div>
-                        <div class="post__mid__content">
-                            {{ post.content }}
-                        </div>
-                    </div>
-                    <hr/>
-                    <div class="post__bottom">
-                    {% if user in post.saved.all %}
-                    <input type="button" class="bookmark" name="{{ post.pk }}" value="O">
-                    {% else %}
-                    <input type="button" class="bookmark" name="{{ post.pk }}" value="X">
-                    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
 
-                    </div>
+        <div class="board__pannel__right">
+            <a href="{% url 'core:board:post_create' univ.url_name %}">
+                <div class="pannel__right__create">
+                    <img src="{% static "svg/create post.svg/" %}" alt="">
+                    <p>Create Post</p>
                 </div>
-
-                <div class="post__image">
-
-                </div>
-
+            </a>
+            <div class="pannel__right__category">
+                <p>Category</p>
+                <ul class="right__category__list">
+                    {% for category in categories %}
+                        <li class="{% cycle "c_a" "c_b" "c_c" "c_d" %}">
+                            <a href="{% url 'core:board:category_board' univ.url_name category.name %}">
+                                <span class="c_common">
+                                    {{ category.name }}
+                                </span>
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
             </div>
-            </li>
-          </div>
-      {% endfor %}
-    </ul>
+        </div>
     </div>
-
-    <div class="board__pannel__right">
-        {{ univ.full_name }} <br>
-        {{ univ.short_name }} <br>
-        {% for category in categories %}
-            <p><a href="{% url 'core:board:category_board' univ.url_name category.name %}">{{ category.name }}</a></p>
-        {% endfor %}
-    </div>
-  </div>
 {% endblock %}
 
 {% block javascript %}
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-          crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"></script>
 
-  <script>
-    $('.like').click(function () {
-      const univUrlName = "{{ univ.url_name }}";
-      const url = '{% url 'core:board:post_like' 0 %}'.replace('0', univUrlName);
-      $.ajax({
-        type: 'POST',
-        url: url,
-        data: {
-          'pk': $(this).attr('name'),
-          'csrfmiddlewaretoken': '{{ csrf_token }}',
-          url_name: univUrlName
-        },
-        datatype: "json",
-        success: function (response) {
-          $(`#post_${response['pk']}`).text(response['likes_count']);
-        },
-        error: function (request, status, error) {
-          alert("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
-        }
-      })
-    });
+    <script>
+        $('.like').click(function () {
+            const univUrlName = "{{ univ.url_name }}";
+            const url = '{% url 'core:board:post_like' 0 %}'.replace('0', univUrlName);
+            $.ajax({
+                type: 'POST',
+                url: url,
+                data: {
+                    'pk': $(this).attr('name'),
+                    'csrfmiddlewaretoken': '{{ csrf_token }}',
+                    url_name: univUrlName
+                },
+                datatype: "json",
+                success: function (response) {
+                    $(`#post_${response['pk']}`).text(response['likes_count']);
+                },
+                error: function (request, status, error) {
+                    alert("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
+                }
+            })
+        });
 
 
-    $('.bookmark').click(function () {
-      const url = '{% url 'core:board:post_bookmark' 0 %}'.replace('0', "{{ univ.url_name }}");
-      $.ajax({
-        type: 'POST',
-        url: url,
-        data: {
-          'pk': $(this).attr('name'),
-          'csrfmiddlewaretoken': '{{ csrf_token }}',
-          url_name: url,
-        },
-        datatype: "json",
-        success: function (response) {
-          console.log(200)
-        },
-        error: function (request, status, error) {
-          alert("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
-        }
-      })
-    });
-  </script>
+        $('.bookmark').click(function () {
+            const url = '{% url 'core:board:post_bookmark' 0 %}'.replace('0', "{{ univ.url_name }}");
+            $.ajax({
+                type: 'POST',
+                url: url,
+                data: {
+                    'pk': $(this).attr('name'),
+                    'csrfmiddlewaretoken': '{{ csrf_token }}',
+                    url_name: url,
+                },
+                datatype: "json",
+                success: function (response) {
+                    console.log(200)
+                },
+                error: function (request, status, error) {
+                    alert("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
+                }
+            })
+        });
+    </script>
 {% endblock %}
